--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,8 @@ bson = "3.1.0"
 juniper = "0.17.1"
 mongodb = "3.5.1"
 serde = "1.0.228"
+serde_json = "1.0"
+
+[dev-dependencies]
+actix-rt = "2.10"
+tokio = { version = "1", features = ["macros"] }
