--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ bson = "3.1.0"
 chrono = { version = "0.4", features = ["serde"] }
 env_logger = "0.11"
 futures = "0.3"
-lazy_static = "1.4"
 mongodb = "3.5.1"
+once_cell = "1.20"
 regex = "1.10"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0"
