--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,12 +14,15 @@ env_logger = "0.11"
 futures = "0.3"
 log = "0.4"
 mongodb = "3.5.1"
+octocrab = "0.49.5"
 once_cell = "1.20"
 regex = "1.10"
+secrecy = "0.10.3"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0"
 tokio = { version = "1", features = ["full"] }
+uuid = "1.20.0"
 validator = { version = "0.19", features = ["derive"] }
 
 [dev-dependencies]
