--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.12.1"
-async-graphql = "7.0"
+async-graphql = { version = "7.0", features = ["chrono", "uuid"] }
 async-graphql-actix-web = "7.0"
 async-trait = "0.1"
 bson = "3.1.0"
