--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.12.1"
+actix-web-httpauth = "0.8"
 async-graphql = { version = "7.0", features = ["chrono", "uuid"] }
 async-graphql-actix-web = "7.0"
 async-trait = "0.1"
@@ -12,6 +13,7 @@ bson = "3.1.0"
 chrono = { version = "0.4", features = ["serde"] }
 env_logger = "0.11"
 futures = "0.3"
+jsonwebtoken = "9"
 log = "0.4"
 mongodb = "3.5.1"
 octocrab = "0.49.5"
