--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ actix-web = "4.12.1"
 actix-web-httpauth = "0.8"
 async-graphql = { version = "7.0", features = ["chrono", "uuid"] }
 async-graphql-actix-web = "7.0"
+async-openai = "0.32.4"
 async-trait = "0.1"
 bson = "3.1.0"
 chrono = { version = "0.4", features = ["serde"] }
@@ -18,6 +19,7 @@ log = "0.4"
 mongodb = "3.5.1"
 octocrab = "0.49.5"
 once_cell = "1.20"
+openai-func-enums = "0.4.0"
 regex = "1.10"
 secrecy = "0.10.3"
 serde = { version = "1.0.228", features = ["derive"] }
