I probably should have worked out if I could make this work or not before I got this far

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ async-openai = { version = "0.32.4", features = ["chat-completion", "byot"] }
 async-trait = "0.1"
 bson = "3.1.0"
 chrono = { version = "0.4", features = ["serde"] }
+dotenvy = "0.15.7"
 env_logger = "0.11"
 futures = "0.3"
 jsonwebtoken = "9"
