--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ mongodb = "3.5.1"
 octocrab = "0.49.5"
 once_cell = "1.20"
 regex = "1.10"
+reqwest = { version = "0.11", features = ["json"] }
 secrecy = "0.10.3"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0"
