--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ thiserror = "2.0"
 tokio = { version = "1", features = ["full"] }
 uuid = "1.20.0"
 validator = { version = "0.19", features = ["derive"] }
+schemars = {version = "1.2.1", features = ["chrono04"] }
 
 [dev-dependencies]
 actix-rt = "2.10"
