--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ tokio = { version = "1", features = ["full"] }
 uuid = "1.20.0"
 validator = { version = "0.19", features = ["derive"] }
 schemars = {version = "1.2.1", features = ["chrono04"] }
+sha2 = "0.10"
 
 [dev-dependencies]
 actix-rt = "2.10"
